Updated projects and education section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         </div>
 
         <div id="education">
+            <h2 style="text-align: center; color: white; font-size: 3rem; text-shadow: 0 0 3px black, 0 0 10px black, 0 0 20px black;">Schools</h2> 
             <div class="schools">
                 <div class="card middle-school">
                     <img class="card-img" src="./images/DAV.jpg" alt="">
@@ -153,10 +154,50 @@
         </div>
 
         <div id="project">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, quidem! Laboriosam, optio numquam praesentium iste, ratione, ad natus eos quasi explicabo veritatis nesciunt mollitia nemo a. Maxime harum blanditiis beatae asperiores perferendis, atque repellat veritatis qui. Sint perspiciatis nemo harum. Laudantium cum, mollitia dolores aspernatur quasi nam eum, tempora maiores officia atque fuga fugiat, nesciunt hic aliquam in voluptate quisquam? Perspiciatis at neque facere temporibus, explicabo tenetur harum hic adipisci accusantium expedita aliquid repellat quidem voluptates fugit ipsam quia, labore, omnis aut eum ipsa asperiores! Dicta voluptate mollitia, architecto error numquam, quisquam ipsa culpa cum veniam natus dignissimos reiciendis doloremque.
+            <h2 style="text-align: center; color: black; font-size: 3rem; text-shadow: 0 0 3px black, 0 0 10px black, 0 0 20px black;">My projects</h2> 
+            <div class="project-cards">
+                <div class="project-card" id="project1">
+                    <div class="shutter" id="shutter1">
+                        <img style="border-top-left-radius: 1rem; border-top-right-radius: 1rem; width: 90%; height: 80%; margin-top: 1rem;" src="./images/blog.jpg" alt="">
+                    </div>
+                    <h3 class="project-title">Web Blog</h3>
+                    <div class="project-description">
+                        A blogging web app written using flask framework containing features such as logging in, logging out, setting profile, making blogs, editting them, deleting them, seeing other people's blogs etc. <br><br>
+                        The project is still under development, but you can have a look at the project in my github.
+                        Project link: <a href="https://github.com/Sahil-k1509/Web_blog" target="_blank">Flask Blog App</a>
+                    </div>
+                    <div class="project-langs">Tags: Python, HTML, CSS, Flask, Flask-SQL</div>
+                </div>
+                <div class="project-card" id="project2">
+                    <div class="shutter" id="shutter2">
+                        <img style="border-top-left-radius: 1rem; border-top-right-radius: 1rem; width: 90%; height: 80%; margin-top: 1rem;" src="./images/pokemon.jpg" alt="">
+                    </div>
+                    <h3 class="project-title">Console Game</h3>
+                    <div class="project-description">
+                        A console based pokemon game written using C++ is an implementation of Object Oriented Programming. <br>
+                        Game include some worth mentioning features such as type advantages of certain types of pokemon over other types of pokemon, i.e. Fire type being stronger than Grass type etc causing them to deal more damage and taking less damage. There are other features too such as decreasing confidence of pokemon on continuous escapes during battle resulting in a slight decrease in damage inflicted to enemy. <br><br>
+                        I am thinking to work on adding more pokemons and a database( A txt file based base ) to store User's progress and creating a logging in system, but for the time being, it was just a starter project. <br>
+                        <br>Project link: <a href="https://github.com/Sahil-k1509/Poke_game">Pokemon</a>
+                    </div>
+                    <div class="project-langs">Tags: C++, OOPs</div>
+                </div>
+                <div class="project-card" id="project3">
+                    <div class="shutter" id="shutter3">
+                        <img style="border-top-left-radius: 1rem; border-top-right-radius: 1rem; width: 90%; height: 80%; margin-top: 1rem;" src="./images/ecom.jpg" alt="">
+                    </div>
+                    <h3 class="project-title">Heavenly</h3>
+                    <div class="project-description">
+                        This is a web page for a company that deals with online purchases of goods. It has multiple sections containing of items that are going to be launched soon, that have discounts or the most bought items. There is a contact form that doesnot work well due to lack of backend. <br>
+                       <br>It is a pure html, css app made to implement and practice front end development without JavaScript or PHP etc. <br><br>
+                       Project link: <a href="https://github.com/Sahil-k1509/e-commerce">E-comm site</a> 
+                    </div>
+                    <div class="project-langs">Tags: HTML, CSS, frontend</div>
+                </div>
+            </div>
         </div>
 
-        <div id="contact">  
+        <div id="contact"> 
+            <h2 style="text-align: center; color: white; font-size: 3rem; text-shadow: 0 0 3px rgb(96, 241, 252), 0 0 10px rgb(96, 241, 252), 0 0 20px rgb(96, 241, 252);">Contact me!</h2> 
             <form action="#">
                 <div>
                     <label for="firstname">Name: </label>
@@ -164,7 +205,7 @@
                 </div>
                     
                 <div>
-                <label for="lastname">last Name: </label>
+                <label for="lastname">Email: </label>
                     <input id="email" type="email" name="email" placeholder="Your email">
                 </div>
 
