Added br tag in project1

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h3 class="project-title">Web Blog</h3>
                     <div class="project-description">
                         A blogging web app written using flask framework containing features such as logging in, logging out, setting profile, making blogs, editting them, deleting them, seeing other people's blogs etc. <br><br>
-                        The project is still under development, but you can have a look at the project in my github.
+                        The project is still under development, but you can have a look at the project in my github. <br><br>
                         Project link: <a href="https://github.com/Sahil-k1509/Web_blog" target="_blank">Flask Blog App</a>
                     </div>
                     <div class="project-langs">Tags: Python, HTML, CSS, Flask, Flask-SQL</div>
