Added html for new projects

--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
                     <h3>Can Code In: </h3>
                     <ul>
                         <li class="language">Python</li>
+                        <li class="language">Java Script</li>
                         <li class="language">C++</li>
                         <li class="language">C</li>
-                        <li class="language">Java Script</li>
                         <li class="language">Kotlin</li>
                         <li class="language">Java</li>
                         <li class="language">PHP</li>
+                        <li class="language">R</li>
                     </ul>
                 </div>
                 <div class="additionals">
@@ -88,12 +89,15 @@
                         <ul>
                             <li class="other">HTML/PUG</li>
                             <li class="other">CSS/SCSS</li>
+                            <li class="other">Django</li>
                             <li class="other">Flask</li>
-                            <li class="other">Matplotlib</li>
-                            <li class="other">Batch Scripting</li>
+                            <li class="other">ReactJS</li>
                             <li class="other">NodeJS</li>
                             <li class="other">ExpressJS</li>
                             <li class="other">PyGame</li>
+                            <li class="other">Bootstrap</li>
+                            <li class="other">Matplotlib</li>
+                            <li class="other">Batch Scripting</li>
                         </ul>
                     </ul>
                 </div>
@@ -108,6 +112,8 @@
                         <li class="editor">PHPStorm</li>
                         <li class="editor">Notepad++</li>
                         <li class="editor">Atom</li>
+                        <li class="editor">Spyder</li>
+                        <li class="editor">Jupyter Notebook</li>
                         <li class="editor">CodeBlocks</li>
                     </ul>
                 </div>
@@ -117,7 +123,7 @@
                         <li class="terminal">Command Prompt</li>
                         <li class="terminal">Powershell</li>
                         <li class="terminal">Git Bash</li>
-                        <li class="terminal">Linux Terminal</li>
+                        <li class="terminal">Ubuntu Terminal</li>
                     </ul>
                 </div>
             </div>
@@ -162,8 +168,8 @@
                     <h3 class="project-title">Web Blog</h3>
                     <div class="project-description">
                         A blogging web app written using flask framework containing features such as logging in, logging out, setting profile, making blogs, editting them, deleting them, seeing other people's blogs etc. <br><br>
-                        The project is still under development, but you can have a look at the project in my github. <br><br>
-                        Project link: <a href="https://github.com/Sahil-k1509/Web_blog" target="_blank">Flask Blog App</a>
+                        The project is still under development, but you can have a look at the project in my github. <br>
+                        <br> Project link: <a href="https://github.com/Sahil-k1509/Web_blog" target="_blank">Flask Blog App</a>
                     </div>
                     <div class="project-langs">Tags: Python, HTML, CSS, Flask, Flask-SQL</div>
                 </div>
@@ -174,7 +180,7 @@
                     <h3 class="project-title">Console Game</h3>
                     <div class="project-description">
                         A console based pokemon game written using C++ is an implementation of Object Oriented Programming. <br>
-                        Game include some worth mentioning features such as type advantages of certain types of pokemon over other types of pokemon, i.e. Fire type being stronger than Grass type etc causing them to deal more damage and taking less damage. There are other features too such as decreasing confidence of pokemon on continuous escapes during battle resulting in a slight decrease in damage inflicted to enemy. <br><br>
+                        Game include some worth mentioning features such as type advantages of certain types of pokemon over other types of pokemon<br><br>
                         I am thinking to work on adding more pokemons and a database( A txt file based base ) to store User's progress and creating a logging in system, but for the time being, it was just a starter project. <br>
                         <br>Project link: <a href="https://github.com/Sahil-k1509/Poke_game">Pokemon</a>
                     </div>
@@ -182,13 +188,47 @@
                 </div>
                 <div class="project-card" id="project3">
                     <div class="shutter" id="shutter3">
+                        <img style="border-top-left-radius: 1rem; border-top-right-radius: 1rem; width: 90%; height: 80%; margin-top: 1rem;" src="./images/snake.jpg" alt="">
+                    </div>
+                    <h3 class="project-title">Toxicated</h3>
+                    <div class="project-description">
+                       This is a snake game based on Javascript and HTML. This is a classic game with three mode having various maze sizes and buttons to control speed.<br>
+                       <br>It is a fully developed project with basic javascript.<br><br>
+                       Project link: <a href="https://github.com/Sahil-k1509/Toxicated">Toxicated</a> <br>
+                       Play Game: <a href="http://sahil-k1509.github.io/Toxicated">Snake Game</a> 
+                    </div>
+                    <div class="project-langs">Tags: HTML, CSS, frontend, JavaScript</div>
+                </div>
+                <div class="project-card" id="project4">
+                    <div class="shutter" id="shutter4">
+                        <img style="border-top-left-radius: 1rem; border-top-right-radius: 1rem; width: 90%; height: 80%; margin-top: 1rem;" src="./images/spaceinvaders.jpg" alt="">
+                    </div>
+                    <h3 class="project-title">Space Invaders</h3>
+                    <div class="project-description">
+                        It is a pyGame based space invaders game with enemy approaching you with increasing hordes as the game progresses. Survive as long as you can. There is no database of highscore system. Just run the program and start playing. <br>
+                      <br>  Project link: <a href="https://github.com/Sahil-k1509/space-invaders">Space invaders</a> 
+                    </div>
+                    <div class="project-langs">Tags: Python, PyGame</div>
+                </div>
+                <div class="project-card" id="project5">
+                    <div class="shutter" id="shutter5">
+                        <img style="border-top-left-radius: 1rem; border-top-right-radius: 1rem; width: 90%; height: 80%; margin-top: 1rem;" src="./images/seafood.jpg" alt="">
+                    </div>
+                    <h3 class="project-title">Catch of the Day</h3>
+                    <div class="project-description">
+                        It is a React based online menu for a seafood restaurant where you can select from a variety of sea foods as long as the dish is in stock. There is an administration panel that can modify menu. The changes will instantaneously reflect on the current bill and menu.
+                      <br><br>  Project link: <a href="https://github.com/Sahil-k1509/catch-of-the-day">Sea food</a> 
+                    </div>
+                    <div class="project-langs">Tags: HTML, CSS, ReactJS, Javascript</div>
+                </div>
+                <div class="project-card" id="project6">
+                    <div class="shutter" id="shutter6">
                         <img style="border-top-left-radius: 1rem; border-top-right-radius: 1rem; width: 90%; height: 80%; margin-top: 1rem;" src="./images/ecom.jpg" alt="">
                     </div>
                     <h3 class="project-title">Heavenly</h3>
                     <div class="project-description">
                         This is a web page for a company that deals with online purchases of goods. It has multiple sections containing of items that are going to be launched soon, that have discounts or the most bought items. There is a contact form that doesnot work well due to lack of backend. <br>
-                       <br>It is a pure html, css app made to implement and practice front end development without JavaScript or PHP etc. <br><br>
-                       Project link: <a href="https://github.com/Sahil-k1509/e-commerce">E-comm site</a> 
+                      <br> Project link: <a href="https://github.com/Sahil-k1509/e-commerce">E-comm site</a> 
                     </div>
                     <div class="project-langs">Tags: HTML, CSS, frontend</div>
                 </div>
