--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         A console based pokemon game written using C++ is an implementation of Object Oriented Programming. <br>
                         Game include some worth mentioning features such as type advantages of certain types of pokemon over other types of pokemon<br><br>
                         I am thinking to work on adding more pokemons and a database( A txt file based base ) to store User's progress and creating a logging in system, but for the time being, it was just a starter project. <br>
-                        <br>Project link: <a href="https://github.com/Sahil-k1509/Poke_game">Pokemon</a>
+                        <br>Project link: <a href="https://github.com/Sahil-k1509/Poke_game" target="_blank">Pokemon</a>
                     </div>
                     <div class="project-langs">Tags: C++, OOPs</div>
                 </div>
@@ -194,8 +194,8 @@
                     <div class="project-description">
                        This is a snake game based on Javascript and HTML. This is a classic game with three mode having various maze sizes and buttons to control speed.<br>
                        <br>It is a fully developed project with basic javascript.<br><br>
-                       Project link: <a href="https://github.com/Sahil-k1509/Toxicated">Toxicated</a> <br>
-                       Play Game: <a href="http://sahil-k1509.github.io/Toxicated">Snake Game</a> 
+                       Project link: <a href="https://github.com/Sahil-k1509/Toxicated" target="_blank">Toxicated</a> <br>
+                       Play Game: <a href="http://sahil-k1509.github.io/Toxicated" target="_blank">Snake Game</a> 
                     </div>
                     <div class="project-langs">Tags: HTML, CSS, frontend, JavaScript</div>
                 </div>
@@ -206,7 +206,7 @@
                     <h3 class="project-title">Space Invaders</h3>
                     <div class="project-description">
                         It is a pyGame based space invaders game with enemy approaching you with increasing hordes as the game progresses. Survive as long as you can. There is no database of highscore system. Just run the program and start playing. <br>
-                      <br>  Project link: <a href="https://github.com/Sahil-k1509/space-invaders">Space invaders</a> 
+                      <br>  Project link: <a href="https://github.com/Sahil-k1509/space-invaders" target="_blank">Space invaders</a> 
                     </div>
                     <div class="project-langs">Tags: Python, PyGame</div>
                 </div>
@@ -217,7 +217,7 @@
                     <h3 class="project-title">Catch of the Day</h3>
                     <div class="project-description">
                         It is a React based online menu for a seafood restaurant where you can select from a variety of sea foods as long as the dish is in stock. There is an administration panel that can modify menu. The changes will instantaneously reflect on the current bill and menu.
-                      <br><br>  Project link: <a href="https://github.com/Sahil-k1509/catch-of-the-day">Sea food</a> 
+                      <br><br>  Project link: <a href="https://github.com/Sahil-k1509/catch-of-the-day" target="_blank">Sea food</a> 
                     </div>
                     <div class="project-langs">Tags: HTML, CSS, ReactJS, Javascript</div>
                 </div>
@@ -228,7 +228,7 @@
                     <h3 class="project-title">Heavenly</h3>
                     <div class="project-description">
                         This is a web page for a company that deals with online purchases of goods. It has multiple sections containing of items that are going to be launched soon, that have discounts or the most bought items. There is a contact form that doesnot work well due to lack of backend. <br>
-                      <br> Project link: <a href="https://github.com/Sahil-k1509/e-commerce">E-comm site</a> 
+                      <br> Project link: <a href="https://github.com/Sahil-k1509/e-commerce" target="_blank">E-comm site</a> 
                     </div>
                     <div class="project-langs">Tags: HTML, CSS, frontend</div>
                 </div>
